smart-home/networkpolicy/default.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: default
spec:
  endpointSelector:
    matchLabels: {}
  egress: []
  ingress: []
