smart-home/networkpolicy/home-assistant.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: home-assistant
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: home-assistant
  egress:
    - toEndpoints:
        - matchLabels:
            k8s-app: kube-dns
            k8s:io.kubernetes.pod.namespace: kube-system
      toPorts:
        - ports:
            - port: "53"
              protocol: ANY
          rules:
            dns:
              - matchPattern: "*"
    - toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: octoprint
            k8s:io.kubernetes.pod.namespace: 3d-printing
    - toCIDR:
        - 192.168.32.1/32 # fritz.box
        - 192.168.35.1/32 # Homematic CCU
        - 192.168.35.3/32 # Kitchen RGB strip
        - 192.168.36.1/32 # Denon AVR
        - 192.168.36.2/32 # LG TV
        - 192.168.35.4/32 # Prusa Core One+
    # Multicast DNS
    - toCIDR:
        - 224.0.0.251/32
      toPorts:
        - ports:
            - port: "5353"
              protocol: UDP
    # Simple Service Discovery Protocol
    - toCIDR:
        - 239.255.255.250/32
        - 255.255.255.255/32
      toPorts:
        - ports:
            - port: "1900"
              protocol: UDP
    # HTTPS APIs on the internet (might have used ChatGPT to generate this list)
    - toCIDRSet:
        - cidr: 0.0.0.0/0
          except:
            - 10.0.0.0/8 # Private - RFC 1918
            - 192.168.0.0/16 # Private - RFC 1918
            - 172.16.0.0/12 # Private (RFC1918) - RFC 1918
            - 127.0.0.0/8 # Loopback - RFC 1122
            - 100.64.0.0/10 # Carrier-grade NAT (CGNAT) RFC 6598
            - 169.254.0.0/16 # Link-local (APIPA) – RFC 3927
            - 192.0.0.0/24 # RFC 6890
            - 192.88.99.0/24 # IPv6 over IPv4 - RFC 3068
            - 198.18.0.0/15 # RFC 2544
            - 192.0.2.0/24 # RFC 5737
            - 198.51.100.0/24 # RFC 5737
            - 203.0.113.0/24 # RFC 5737
            - 224.0.0.0/4 # Multicast RFC 5771
            - 240.0.0.0/4 # RFC 1112
            - 255.255.255.255/32 # RFC 919, RFC 922
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
    # Let's get a bit more specific
    - toFQDNs:
        - matchName: api.waqi.info
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
  ingress:
    - fromEntities:
        - ingress
